--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "eslint": "^7.5.0",
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^8.4.21",
+    "sass": "^1.79.3",
+    "sass-loader": "^16.0.2",
     "tailwindcss": "^3.2.4",
     "vue-cli-plugin-tailwind": "3.0.0"
   },
